# miniXGBoost

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  comparisonXGBoost.R  config  main.cpp  test.txt  train.txt
include/: CMakeLists.txt  base.h  config.h  core.h  data.h  devianceLoss.h  gbm.h  io.h  loadData.h  lossFunction.h  loss_function.h  matrix.h  miniXGBoost.h  squaredErrorLoss.h  tree.h
src/: CMakeLists.txt  base.cpp  config.cpp  config.h  core.cpp  core.h  data.cpp  dataIO.cpp  gbTreeEstimator.cpp  gbTreeEstimator.h  gbTreeEvaluator.cpp  gbTreeEvaluator.h  gbTreePredictor.cpp  gbTreePredictor.h  gbm.cpp  io.cpp  io.h  loadData.cpp  loss_function.h  matrix.cpp  matrix.h  miniXGBoost.cpp  tree.cpp  tree.h  treeNodes.cpp  treeNodes.h  utils.h
